# vector-baby

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
deploy/: Dockerfile  README.md  cloudflared.yml  fly-deploy.sh  fly-entrypoint.sh  fly-upload-data.sh  fly.toml  run-local.sh
docs/: NFT_CRAWLER.md
examples/: cfgcheck.rs
scripts/: embed_bayc.py  embed_collection.py  eval_query.py  fetch_traits.py  find_gold.py  nft_crawl.py  nft_crawler.py  nft_search_app.py  requirements.txt
scripts/nft_crawler/: __init__.py  config.py  crawler.py  db.py  discovery.py  export.py  fetcher.py  models.py  parser.py  politeness.py  resolver.py  seeds.json
scripts/nft_crawler/providers/: __init__.py  base.py
src/: dataset.rs  flat.rs  index.rs  kmeans.rs  lib.rs  main.rs  math.rs  pq.rs  rng.rs  server.rs  topk.rs  ui.html
