[package]
name = "vector-baby"
version = "0.1.0"
edition = "2021"
description = "Custom billion-scale vector database (IVF-PQ, disk-backed)"

[[bin]]
name = "vbaby"
path = "src/main.rs"

[lib]
name = "vector_baby"
path = "src/lib.rs"

[dependencies]
rayon = "1.10"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
